# dotrep

./: CLOUD_IMPROVEMENTS_SUMMARY.md  DAPP_COMPLETE_VERIFICATION.md  DEPLOYMENT_COMPLETE.md  Dockerfile.asset-hub  Dockerfile.frontend  Dockerfile.node  ETHICS_IMPROVEMENTS_SUMMARY.md  EXCELLENCE_INNOVATION_IMPROVEMENTS.md  FRONTEND_BACKEND_ALIGNMENT.md  FRONTEND_BACKEND_MAPPING.md  GUARDIAN_INTEGRATION_SUMMARY.md  HACKATHON_SUBMISSION.md  IMPACT_RELEVANCE_IMPROVEMENTS.md  IMPROVEMENTS_HACKATHON.md  MANUS_BUILD_LOG.md  MOCK_DATA_README.md  Makefile  ORIGINTRAIL_DKG_INTEGRATION.md  POLKADOT_FEATURES_IMPROVEMENTS.md  QUICK_START_V8.md  README.md  README_DEPLOYMENT.md  README_DKG_INTEGRATION.md  README_FINAL.md  USER_FLAGGING_IMPLEMENTATION_SUMMARY.md  X402_AUTONOMOUS_AGENTS_SUMMARY.md  convert-diagrams.js  demo_video_script.md  docker-compose.yml  ethics.md  index.html  index.js  metrics.md  nginx.conf  package-lock.json  package.json  submission.md
.github/workflows/: ci.yml  dkg-integration-ci.yml
apps/mcp-server/: Dockerfile
apps/x402/: Dockerfile  HTTP_IMPROVEMENTS.md  HTTP_LAYER_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  PAYMENT_IMPROVEMENTS.md  README.md  README_IMPROVEMENTS.md  blockchain-payment-service.js  client-example.js  eip712-signing.js  example-enhanced-client.js  example-usage.js  facilitator-client.js  mcp-tools.js  package.json  payment-evidence-publisher.js  reputation-filter.js  server.js  session-billing.js  x402-client-sdk.js  x402-http-client.js  x402-http-handlers.js  x402-middleware.js  x402-types.ts  x402-utils.js
backend/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  jest.config.js  package.json
backend/scripts/: seed.js
backend/src/: app.js
backend/tests/: auth.test.js  product.test.js  setup.js
config/: chain-spec.json  create.local.sample-dotrep-v2.json  create.remote.dotrep-testnet.json  create.remote.sample-dotrep-cloud.json  create.remote.sample-dotrep-v2.json  create.remote.sample-enhanced-cloud.json
data/: sample_graph.json
deploy/: docker-compose.yml
docs/: CLOUD_FEATURES_ENHANCEMENTS.md  DECENTRALIZED_REPUTATION_SYSTEM.md  JUDGE_TECHNICAL_EXCELLENCE.md  UMANITEK_GUARDIAN_INTEGRATION_BLUEPRINT.md  ethics.md
docs/quick-start/: ONFINALITY_QUICK_START.md  QUICK_DEPLOY.md  QUICK_START_DKG.md
docs/readmes/: CLOUD_IMPROVEMENTS_SUMMARY.md  DAPP_COMPLETE_VERIFICATION.md  DAPP_FEATURES_VERIFICATION.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TESTNET.md  FIXES_APPLIED.md  FRONTEND_BACKEND_ALIGNMENT.md  FRONTEND_BACKEND_MAPPING.md  HACKATHON_README.md  HACKATHON_SUBMISSION.md  IMPROVEMENTS.md  IMPROVEMENTS_HACKATHON.md  IMPROVEMENTS_SUMMARY.md  MOCK_DATA_README.md  QUICK_DEPLOY.md  README-DOCKER-STACK.md  README.md
docs/summaries/: CHANGELOG_V8.md  DAPP_FEATURES_VERIFICATION.md  DATA_RELIABILITY_IMPROVEMENTS.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TESTNET.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  NEUROWEB_TRUST_LAYER_IMPROVEMENTS.md
dotrep-v2/: .dockerignore  CLOUD_INTEGRATION.md  Dockerfile  Dockerfile.worker  FRONTEND_IMPROVEMENTS.md  FRONTEND_IMPROVEMENTS_V2.md  GITHUB_INTEGRATION.md  GITHUB_OAUTH_SETUP.md  GUARDIAN_INTEGRATION_SUMMARY.md  MOCK_MODE_README.md  MOCK_MODE_SETUP_SUMMARY.md  ONFINALITY_SETUP.md  POC_SETUP.md  QUICK_START_MOCK.md  README-DEPLOYMENT.md  docker-compose.cloud.yml  docker-compose.poc.yml  package.json  pnpm-lock.yaml  seed.ts  test-server.js  todo.md  tsconfig.json  vite.config.ts  wrangler.toml
dotrep-v2/client/: AI_AGENTS_DKG_DEMO_README.md
dotrep-v2/dkg-integration/: .env.example  CAMPAIGN_DEMO_README.md  CAMPAIGN_SYSTEM_SUMMARY.md  CONTENT_SHARING_NETWORK_README.md  DKG_AGENT_LAUNCHER_README.md  DKG_AGENT_X402_IMPROVEMENTS.md  ECOMMERCE_IMPROVEMENTS_SUMMARY.md  GRAPH_ALGORITHMS_README.md  GUARDIAN_KNOWLEDGE_BASE.md  IDENTITY_TOKENOMICS_IMPLEMENTATION.md  README.md  (+77 more)
lib/: version.js
monetization/: .gitignore  MANUS_BUILD_LOG.md  QUICKSTART.md  README.md  ethics.md  package.json
monitoring/: prometheus.yml
pallets/governance/: Cargo.toml  README.md
pallets/governance/src/: lib.rs  mock.rs  tests.rs
pallets/reputation/: CODE_IMPROVEMENTS.md  Cargo.toml  README.md  TESTING_GUIDE.md
pallets/reputation/src/: benchmarking.rs  dkg_integration.rs  lib.rs  mock.rs  offchain.rs  tests.rs  xcm.rs
pallets/trust-layer/: Cargo.toml
pallets/trust-layer/src/: lib.rs
scripts/: demo.sh  deploy-testnet.sh  gen_did_key.sh  init-chain.sh  run_smoke.sh  verify_asset.py  verify_receipt.py  wait-for-it.sh
templates/: automated_user_flag.jsonld  community_note.jsonld  content_verification_report.jsonld  receipt_asset.jsonld  reputation_asset.jsonld  trusted_user_profile.jsonld  user_flag.jsonld
(+396 files in other folders)
