[package]
name = "pallet-trust-layer"
version = "0.1.0"
authors = ["DotRep Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lucylow/dotrep"
description = "Trust layer pallet for DotRep with x402 micropayment integration"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }
sp-std = { version = "5.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "7.0.0" }
sp-io = { version = "7.0.0" }
pallet-balances = { version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-std/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
